tests/paczka1/fuzzy1/70564267.err
Error in line 4: HPCE0x6ag A684 16,5
Error in line 10: 1Hs S974 0,1
Error in line 13: A684 A684 92,5
Error in line 14: HPCE0x6ag A951 34,3
Error in line 28: R1DGF7uIiOO A951 294,9
Error in line 30: 4mlTYF A951 4,0
Error in line 19: HPCE0x6ag S974 92,4
Error in line 33: HPCE0x6ag A951 81,2
Error in line 31: 4mlTYF A684 98,7
